# programacion_utec

./: .gitignore
CodeForce/Problem1/: CMakeLists.txt  main.cpp
CodeForce/problem2/: CMakeLists.txt  main.cpp
CodeForce/problem3/: CMakeLists.txt  main.cpp
CodeForce/problem4/: CMakeLists.txt  main.cpp
CodeForce/problem5/: CMakeLists.txt  example1.cpp  main.cpp
CodeForce/problem6/: CMakeLists.txt  main.cpp
PROGRAMACION III/: INVARIANTE DE BUCLE.txt  PATRONES DE DISEÑO I.docx  PROGRA III.txt  ssss.txt
PROGRAMACION III/BFS AND DFS/: CMakeLists.txt  main.cpp
PROGRAMACION III/PC_PASADAS/PC1/: CMakeLists.txt  Polinomio.cpp  Polinomio.h  p1.cpp  p2.cpp
PROGRAMACION III/PC_PASADAS/PC2/: CMakeLists.txt  main.cpp
PROGRAMACION III/PC_PASADAS/PC2/PC2_1/: p1.cpp  p2.cpp  p3.cpp  p3_2.cpp
PROGRAMACION III/PC_PASADAS/PC2/PC2_2/: p1.cpp  p2.cpp  p3.cpp
PROGRAMACION III/PROGRA III - LAB/CLASE 2/: CMakeLists.txt  Ejercicios.cpp  Ejercicios2.cpp  function1.cpp  function1.h  function2.cpp  function2.h  main.cpp
PROGRAMACION III/PROGRA III - LAB/CLASE 3/: CMakeLists.txt  Ejercicios1.cpp  Numeros.cpp  Numeros.h  borrador.cpp  ejercicio3.cpp  ejercicio4.cpp  function1.cpp  function1.h  main.cpp  number.cpp  number.h
PROGRAMACION III/PROGRA III - LAB/CLASE I/: CMakeLists.txt  Ejercicios.cpp  borrador.cpp  function.cpp  function.h  main.cpp
PROGRAMACION III/PROGRA III - LAB/CLASE4/: BORRADOR.cpp  CMakeLists.txt  ejercicio1_1.cpp  ejercicio1_2.cpp  main.cpp  matrix.cpp  matrix.h  numComp.cpp  numComp.h
PROGRAMACION III/PROGRA III - LAB/PC2/: borrador.cpp  (+7 more)
PROGRAMACION III/PROGRA III - LAB/Semana 2/CLASE 3/: CMakeLists.txt  ejemplo1.cpp  ejemplo2.cpp  ejercicio1_1.cpp  ejercicio1_2.cpp  ejercicio2_1.cpp  ejercicio2_2.cpp  main.cpp
PROGRAMACION III/PROGRA III - LAB/Semana 5/CLASE 2/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
PROGRAMACION III/PROGRA III - LAB/Semana 5/CLASE 4/: CMakeLists.txt  ejemplo1.cpp  ejemplo2.cpp  ejemplo3.cpp  ejemplo4.cpp  ejemplo5.cpp  ejercicio1.cpp  ejercicio2.cpp  ejercicio2_profe.cpp
PROGRAMACION III/PROGRA III - LAB/Semana 7/DFS/: CMakeLists.txt
PROGRAMACION III/PROGRA III - LAB/Semana 7/DFS/ALGORITMOS/: BFS_sortest_path.cpp  BST.cpp  Dijkstra.cpp  Dijkstra_exercise1.cpp  Dijkstra_exercise2.cpp  Dijkstra_exercise3.cpp  exercise1.cpp  kruskal.cpp  maze_generator.cpp
PROGRAMACION III/PROGRA III - LAB/Semana3/CLASE 2/: CMakeLists.txt  ejemplo1.cpp  ejemplo2.cpp  ejemplo3.cpp  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  main.cpp
PROGRAMACION III/PROGRA III - LAB/Semana4/CLASE 1/: CMakeLists.txt  ejemplo1.cpp  ejercicio2.cpp
PROGRAMACION III/PROGRA III - LAB/examples/: CMakeLists.txt
PROGRAMACION III/PROGRA III - TEO/TAREAS/TAREA 2/: CMakeLists.txt  borrador.cpp  ejercicio1.cpp  ejercicio10.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp  ejercicio9.cpp  main.cpp  p1.cpp  p1.h
PROGRAMACION III/PROGRA III - TEO/TAREAS/TAREA 6/: CMakeLists.txt  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  main.cpp
PROGRAMACION III/PROGRA III - TEO/TAREAS/TAREA3/: Borrador2.cpp  CMakeLists.txt  borrador.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp  ejercicio9.cpp  main.cpp
PROGRAMACION III/PROGRA III - TEO/TAREAS/TAREA5/: CMakeLists.txt  borrador.cpp  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  main.cpp
PROGRAMACION III/borrador/: CMakeLists.txt  main.cpp
PROGRAMACION III/menu2/: CMakeLists.txt  main.cpp
PROGRAMACION III/menu_prueba1/: CMakeLists.txt  main.cpp
PROGRAMACION III/menu_prueba3/: CMakeLists.txt  main.cpp
PROGRAMACION III/prog_concurrente/: CMakeLists.txt  example2.cpp  example3.cpp
PROGRAMACION III/proyecto/: CMakeLists.txt  README.md  main.cpp
Programacion IV/: COMO IMPLEMENTAMOS UN ITERADOR DE H.txt  backtrackingXD.txt  centinel.txt  distancias.txt  flody.txt  ventajas.txt
Programacion IV/ARBOLES_IMPLEMENTACION/: B_tree2.cpp  CMakeLists.txt
Programacion IV/ARBOLES_IMPLEMENTACION/src/: AVL_TREE.cpp  B_TREE.cpp  borrador.cpp  borrador2.cpp  borrador3.cpp  flody.cpp  main.cpp  sss.cpp  trie.cpp
Programacion IV/CODEROOM2/: CMakeLists.txt  chainhash.h  forward_list.cpp  forward_list.h  implementar_hash.cpp  main.cpp
Programacion IV/CODEROOM4/: CMakeLists.txt  main.cpp
Programacion IV/EXPO1/: CMakeLists.txt  SortingAlgoritmos.h  main.cpp  sorting_benchmark.cpp
Programacion IV/Eva. Continua/: CMakeLists.txt
Programacion IV/GRAFOS/: CMakeLists.txt  borrador.cpp  kruskal.cpp
Programacion IV/TAREA2/: .gitignore  CMakeLists.txt  circular.h  forward.h  main.cpp  node.h
Programacion IV/TAREAS/2/: .gitignore  CMakeLists.txt  README.md  main.cpp  patriciatrie.h
Programacion IV/arboles_implentados/: CMakeLists.txt
Programacion IV/btree-parangutirimicuaro/: CMakeLists.txt  README.md  btree.h  node.h
Programacion IV/circular-array-grupo22/: CMakeLists.txt  README.md  circulararray.h  main.cpp  queue.h
Programacion IV/coderoom3/: CMakeLists.txt  main.cpp  person.h  set.h
Programacion IV/examenes_parciales/: CMakeLists.txt
Programacion IV/examenes_parciales/examen1/: conecptuales.cpp  examen1.cpp
Programacion IV/homeword_circularList/: CMakeLists.txt  circular_list.cpp  main.cpp
Programacion IV/max-min-heaps-w23456789/: .gitignore  heap.h  main.cpp
Programacion IV/papel/: CMakeLists.txt  hola.h  main.cpp  sss.cpp
Programacion IV/problme1_aula/: CMakeLists.txt  Circular_Linked_List.cpp  Doubly_Linked_List.cpp  coderoom.cpp  main.cpp  papel.cpp
Programacion IV/proyecto/: BlockChain.cpp  BlockChain.h  Btree.h  README.md  main.cpp  node.h
Programacion IV/tarea2_git/: CMakeLists.txt  main.cpp
Programacion IV/tarea3_git/: .gitignore  CMakeLists.txt  README.md  main.cpp  solution.h
Programacion IV/tarea4_git/: .gitignore  CMakeLists.txt  README.md  bst.h  main.cpp  node.h
Training_Camp/DAY 2/: problemA.cpp  problemB.cpp  problemC.cpp
Training_Camp/DAY1/: example.cpp
(+296 files in other folders)
