cmake_minimum_required(VERSION 3.23)
project(prog_concurrente)

set(CMAKE_CXX_STANDARD 20)

add_executable(prog_concurrente main.cpp)
add_executable(ejemplo1 example1.cpp)
add_executable(ejemplo2 example2.cpp)
add_executable(ejemplo3 example3.cpp)
add_executable(ejemplo4 example4.cpp)
add_executable(ejemplo5 example5.cpp)