cmake_minimum_required(VERSION 3.23)
project(problme1_aula)

set(CMAKE_CXX_STANDARD 20)

add_executable(problme1_aula main.cpp)
add_executable(Doble_Lista_Enlazada Doubly_Linked_List.cpp)
add_executable(Circular_LIST Circular_Linked_List.cpp)
add_executable(borrador papel.cpp)
add_executable(borr coderoom.cpp)