cmake_minimum_required(VERSION 3.23)
project(PC2)

set(CMAKE_CXX_STANDARD 20)

add_executable(PC2 main.cpp)
add_executable(PC2_1_1 PC2_1/p1.cpp)
add_executable(PC2_1_2 PC2_1/p2.cpp)
add_executable(PC2_1_3 PC2_1/p3.cpp)
add_executable(PC2_1_3_2 PC2_1/p3_2.cpp)
add_executable(PC2_2_1 PC2_2/p1.cpp)
add_executable(PC2_2_2 PC2_2/p2.cpp)
add_executable(PC2_2_3 PC2_2/p3.cpp)