cmake_minimum_required(VERSION 3.23)
project(CLASE_I)

set(CMAKE_CXX_STANDARD 14)

add_executable(CLASE_I main.cpp)
add_executable(BORRADOR borrador.cpp)
add_executable(Exercises Ejercicios.cpp function.cpp function.h)
add_executable(Ejercicio11 Ejercicio1_1.cpp)
add_executable(Ejercicio12 Ejercicio1_2.cpp)
add_executable(Ejercicio13 Ejercicio1_3.cpp)