cmake_minimum_required(VERSION 3.23)
project(CLASE_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(CLASE_3 main.cpp)
add_executable(example1 ejemplo1.cpp)
add_executable(example2 ejemplo2.cpp)
add_executable(exercise1_1 ejercicio1_1.cpp)
add_executable(exercise1_2 ejercicio1_2.cpp)
add_executable(exercise2_1 ejercicio2_1.cpp)
add_executable(exercise2_2 ejercicio2_2.cpp)
