cmake_minimum_required(VERSION 3.23)
project(CLASE_4)

set(CMAKE_CXX_STANDARD 20)

add_executable(CLASE_4 main.cpp)
add_executable(example1 ejemplo1.cpp)
add_executable(example2 ejemplo2.cpp)
add_executable(example3 ejemplo3.cpp)
add_executable(example4 ejemplo4.cpp)
add_executable(exercise1 ejercicio1.cpp)
add_executable(exercise2 ejercicio2.cpp)
add_executable(exercise2_profe ejercicio2_profe.cpp)
add_executable(example5 ejemplo5.cpp)
