cmake_minimum_required(VERSION 3.23)
project(CLASE_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(CLASE_1 main.cpp)
add_executable(example1 ejemplo1.cpp)
add_executable(exercise1 ejercicio1.cpp)
add_executable(exercise2 ejercicio2.cpp)
add_executable(exercise3 ejercicio3.cpp)
add_subdirectory(examples)