cmake_minimum_required(VERSION 3.23)
project(TAREA_6)

set(CMAKE_CXX_STANDARD 20)

add_executable(TAREA_6 main.cpp)
add_executable(exercise2 ejercicio2.cpp)
add_executable(exercise3 ejercicio3.cpp)
add_executable(exercise4 ejercicio4.cpp)
add_executable(exercise5 ejercicio5.cpp)
add_executable(exercise6 ejercicio6.cpp)
