cmake_minimum_required(VERSION 3.23)
project(TAREA5)

set(CMAKE_CXX_STANDARD 20)

add_executable(TAREA5 main.cpp)
add_executable(exercise1 ejercicio1.cpp)
add_executable(exercise2 ejercicio2.cpp)
add_executable(exercise3 ejercicio3.cpp)
add_executable(papel borrador.cpp)
add_executable(exercise4 ejercicio4.cpp)